[package]
name = "rlinenum"
version = "0.1.0"
authors = ["Administator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.21"
nix = "0.15.0"
lazy_static = "1.4.0"
failure = "0.1.5"
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"

[profile.release]
lto = true
